# RatFinder-honeypot

./: CMakeLists.txt  Logs.txt  README.md  buildhttplib.sh  compile.sh  dupa.pcap  run.sh  setupCMake.sh
inc/: PacketCapturer.h  log.h
src/: PacketCapturer.cpp  dupa.txt  log.cpp  main.cpp
